--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "minibook-2b918"
-  }
+    "default": "minibook-2b918",
+    "hosting": "minibook-2b918"
+  },
+  "targets": {},
+  "etags": {}
 }
